删了没用的代码（

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
         <div class="section-title">
           <h2>关于服务器</h2>
-          <p>这个服务器诞生于2020年是由ByDiamond创建并运营的空岛生存服务器，2020年5月31日[我也忘了~哎嘿]由华喵接手负责运营空岛，2021年由LiteCat接手负责运营生存服务器，2022年CiMiao接手 负责运营RTCRAFT SP！</p>
+          <p>这个服务器诞生于2020年是由ByDiamond创建并运营的空岛生存服务器，2020年5月31日由华喵接手负责运营空岛，2021生存服务器开启，2022年CiMiao接手负责运营RTCRAFT SP！</p>
         </div>
 
         <div class="row">
@@ -318,7 +318,7 @@
 
         <div class="section-title">
           <h2>数据</h2>
-          <p>服务器的一些数据，你可以看看，但是对你游玩没什么帮助······</p>
+          <p>服务器的一些数据······</p>
           <strong style="color:#0563BB">数据最后更新时间：2022/10/09 21:30</strong>
         </div>
 
@@ -351,7 +351,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-patch-question-fill"></i>
-              <span data-purecounter-start="0" data-purecounter-end="114514" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="1145141919810" data-purecounter-duration="1" class="purecounter"></span>
               <p>待定</p>
             </div>
           </div>
@@ -571,7 +571,7 @@
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div> -->
       <div class="copyright">
-        Copyright &copy; 2020-2022 <strong><span>RTCraft</span></strong> ( <?xml version="1.0" encoding="UTF-8"?><svg width="12" height="12" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M36 12C38.2091 12 40 10.2091 40 8C40 5.79086 38.2091 4 36 4C33.7909 4 32 5.79086 32 8C32 10.2091 33.7909 12 36 12Z" fill="#B9B9C3" stroke="#B9B9C3" stroke-width="3" stroke-linecap="round" stroke-linejoin="bevel"/><path fill-rule="evenodd" clip-rule="evenodd" d="M14 12C16.2091 12 18 10.2091 18 8C18 5.79086 16.2091 4 14 4C11.7909 4 10 5.79086 10 8C10 10.2091 11.7909 12 14 12Z" fill="#B9B9C3" stroke="#B9B9C3" stroke-width="3" stroke-linecap="round" stroke-linejoin="bevel"/><path fill-rule="evenodd" clip-rule="evenodd" d="M14 44C16.2091 44 18 42.2091 18 40C18 37.7909 16.2091 36 14 36C11.7909 36 10 37.7909 10 40C10 42.2091 11.7909 44 14 44Z" fill="#B9B9C3" stroke="#B9B9C3" stroke-width="3" stroke-linecap="round" stroke-linejoin="bevel"/><path d="M14 12L14 36L14 33C14 25 36 24 36 16V12" stroke="#B9B9C3" stroke-width="3" stroke-linecap="round" stroke-linejoin="bevel"/></svg>??????? ) All Rights Reserved.
+        Copyright &copy; 2020-2022 <strong><span>RTCraft</span></strong> All Rights Reserved.
       </div>
       <div class="credits">
         设计： <a href="https://bootstrapmade.com/">BootstrapMade</a>
