添加百度收录

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title>RTCRAFT | 主页</title>
   <meta content="RTCraft 生存RPG 服务器的网站！" name="description">
   <meta content="我的世界,RTCraft,minecraft,mc,生存,RPG,剧情,任务,故事,游戏,服务器" name="keywords">
-
+  <!-- 百度收录 -->
+  <meta name="baidu-site-verification" content="code-Sfn92ePsYr" />
+  
   <!-- 图标 -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
