其他几个平台收录

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
   <meta content="我的世界,RTCraft,minecraft,mc,生存,RPG,剧情,任务,故事,游戏,服务器" name="keywords">
   <!-- 百度收录 -->
   <meta name="baidu-site-verification" content="code-Sfn92ePsYr" />
-  
+  <!-- Bing收录 -->
+  <meta name="msvalidate.01" content="DBBB099C87EEBE91BA7EA181968A9239" />
+  <!-- 搜狗收录 -->
+  <meta name="sogou_site_verification" content="ZJWgLdUzm1" />
+  <!-- 头条收录 -->
+  <meta name="bytedance-verification-code" content="+ej9rDQsirBWE+MTV1vq" />
+  <!-- 谷歌收录 -->
+  <meta name="google-site-verification" content="Skpkj-o5CeFnUJ5Kp-U9X06MD6Cht2n0jpqtN2Wc1hA" />
   <!-- 图标 -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
